# songbird-android

./: .gitignore  CODE_OF_CONDUCT.md  README.md  jitpack.yml  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tsirysndr/songbirdlib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tsirysndr/songbird/: MainActivity.kt  SecondFragment.kt  Songbird.kt
app/src/main/java/com/tsirysndr/songbirdlib/: FirstFragment.kt  MainActivity.kt  Songbird.kt  SongbirdService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tsirysndr/songbirdlib/: ExampleUnitTest.kt
rust/: Cargo.toml
rust/src/: lib.rs  play.rs  server.rs
