[package]
name = "songbird-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
music-player-graphql = "0.1.8"
music-player-server = "0.1.13"
music-player-webui = "0.1.12"
